[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1.5.0"
tonic = {version = "0.10.2"}
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"]}